%%{init: {
  "theme": "base",
  "themeVariables": {
    "primaryColor": "#3b3f51",
    "primaryTextColor": "#c6d0f5",
    "primaryBorderColor": "#414559",
    "lineColor": "#8caaee",
    "secondaryColor": "#414559",
    "tertiaryColor": "#303446",
    "background": "#303446",
    "mainBkg": "#3b3f51",
    "nodeBorder": "#414559",
    "clusterBkg": "#3b3f51",
    "clusterBorder": "#414559",
    "titleColor": "#eebebe",
    "edgeLabelBackground": "#3b3f51"
  },
  "themeCSS": ".er.entityBox { fill: #3b3f51; stroke: #414559; } .er.entityBoxTitle { fill: #eebebe; } .er.attributeBoxEven { fill: #3b3f51; } .er.attributeBoxOdd { fill: #303446; } .er.attributeText { fill: #c6d0f5; } .er.attributeTextNPT { fill: #a5adce; } .er.relationshipLine { stroke: #8caaee; } .er.relationshipLabel { fill: #c6d0f5; } .er.relationshipLabelBox { fill: #3b3f51; }"
}}%%
erDiagram

"public.campuses" }o--|| "public.profiles" : "FOREIGN KEY (president_profile_id) REFERENCES profiles(id)"
"public.faculties" }o--|| "public.profiles" : "FOREIGN KEY (coordinator_profile_id) REFERENCES profiles(id)"
"public.faculties" }o--|| "public.profiles" : "FOREIGN KEY (dean_profile_id) REFERENCES profiles(id)"
"public.schools" }o--|| "public.profiles" : "FOREIGN KEY (tutor_profile_id) REFERENCES profiles(id)"
"public.students" }o--|| "public.profiles" : "FOREIGN KEY (profile_id) REFERENCES profiles(id)"
"public.institutions" }o--|| "public.profiles" : "FOREIGN KEY (contact_person_profile_id) REFERENCES profiles(id)"
"public.documents" }o--|| "public.profiles" : "FOREIGN KEY (uploaded_by_profile_id) REFERENCES profiles(id) ON DELETE CASCADE"
"public.projects" }o--|| "public.profiles" : "FOREIGN KEY (coordinator_profile_id) REFERENCES profiles(id)"
"public.projects" }o--|| "public.profiles" : "FOREIGN KEY (student_profile_id) REFERENCES profiles(id)"
"public.projects" }o--|| "public.profiles" : "FOREIGN KEY (tutor_profile_id) REFERENCES profiles(id)"
"public.invitations" }o--|| "public.profiles" : "FOREIGN KEY (invited_by_profile_id) REFERENCES profiles(id)"
"public.profiles" }o--|| "public.roles" : "FOREIGN KEY (role_id) REFERENCES roles(id)"

"public.profiles" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  uuid id 
  text first_name 
  text last_name 
  text national_id 
  text email 
  text primary_contact 
  text secondary_contact 
  bigint role_id 
}

"public.campuses" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  bigint location_id 
  text campus_name 
  uuid president_profile_id 
}

"public.faculties" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  bigint campus_id 
  text faculty_name 
  uuid dean_profile_id 
  uuid coordinator_profile_id 
}

"public.schools" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  bigint faculty_id 
  text school_name 
  uuid tutor_profile_id 
}

"public.students" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  uuid profile_id 
  bigint faculty_id 
  bigint school_id 
  semester_enum semester 
  shift_enum shift 
  section_enum section 
}

"public.institutions" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  bigint location_id 
  uuid contact_person_profile_id 
  text institution_name 
}

"public.documents" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  text bucket_id 
  text storage_path 
  uuid uploaded_by_profile_id 
}

"public.projects" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  uuid tutor_profile_id 
  uuid coordinator_profile_id 
  uuid student_profile_id 
  bigint institution_id 
  text title 
  text abstract 
  bigint pre_project_document_id 
  text pre_project_observations 
  timestamp with time zone pre_project_approved_at 
  bigint project_document_id 
  text project_observations 
  timestamp with time zone project_received_at 
  timestamp with time zone final_project_approved_at 
}

"public.invitations" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  uuid invited_by_profile_id 
  text email 
  bigint role_id 
  text token 
  boolean is_active 
}

"public.roles" {
  timestamp with time zone created_at 
  uuid created_by 
  timestamp with time zone updated_at 
  uuid updated_by 
  bigint id 
  text role_name 
  integer permission_level 
}

